--- a/truespeak/templates/base.html
+++ b/truespeak/templates/base.html
@@ -5,17 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="shortcut icon" href="/static/favicon.ico">
+    <link rel="shortcut icon" href="/static/img/favicon.ico">
 
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/static/base.css" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
-    <script src="/static/base.js"></script>
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/base.css" rel="stylesheet">
 
     {% block css %}
     {% endblock %}
-
 
     <meta charset="utf-8">
     <title>ParselTongue</title>
@@ -67,7 +63,7 @@
             </ul>
             <ul class="nav navbar-nav navbar-right pt_extension_installed">
                 {% if user.is_authenticated %}
-                    <li class="already-registered"> you are logged in as <span class="who-are-you">{{ user.username }}</span> </li>
+                    <li class="already-registered"> you are logged in as: <span class="who-are-you">{{ user.username }}</span> </li>
                     <a href="/logout/" class="btn btn-small btn-success sign-in-button parseltongue_logout">logout</a>
                 {% else %}
                     <li class="already-registered"> already registered? </li>
@@ -92,13 +88,15 @@
         <a style="margin-right:30px" class="twitter-link" href="https://twitter.com/MaxFowler2">@maxfowler2</a>
         <div style="clear:both;"></div>
     </div>
-    <div style="clear:both;"></div>
 </div>
+
+<script src="/static/js/jquery-1.10.2.min.js"></script>
+<script src="/static/js/bootstrap.min.js"></script>
+<script src="/static/js/base.js"></script>
+
+{% block js %}
+{% endblock %}
 
 
 </body>
 </html>
-
-
-
-
