--- a/truespeak/templates/tutorial_snippet.html
+++ b/truespeak/templates/tutorial_snippet.html
@@ -1,36 +1,64 @@
+<div id="carousel-example-generic" class="carousel slide">
 
-<img class="screenshot-image" src="http://i.imgur.com/iEilsDO.jpg"/>
-<p>
-    Click on this snake to log in and out of ParselTongue, modify your settings,
-    or go back to the about page.
-</p>
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner">
+        <div class="active item preview">
+            <img src="/static/img/tutorial/ext-icon.jpg">
+            <!-- <div class="carousel-caption">
+                <p> 
+                    Click on this snake to log in and out of ParselTongue, modify your settings, or go back to the about page.
+                </p>
+            </div> -->
+        </div>
+        <div class="item preview">
+            <img src="/static/img/tutorial/ext-popup-locked.jpg">
+            <!-- <div class="carousel-caption">
+                <h3>ParselTongue works on top of gmail.</h3>
+                <p>
+                    Your gmail will look exactly the same as it did before, except for one new button that appears when you write emails to other ParselTongue users.
+                </p>
+            </div> -->
+        </div>
+        <div class="item preview">
+            <img src="/static/img/tutorial/gmail-unlocked.jpg">
+            <!-- <div class="carousel-caption">
+                <h3>
+                    This snake appears when ParselTongue recognizes that you are sending an email to another ParselTongue user.
+                </h3>
+                <p>
+                    If you click the snake, ParselTongue will encrypt your email, and a lock will appear where the snake was. Although the email will look the same to you, whenever the lock is visible this tells you that your email is encrypted, and only you and your email's recipients will be able to read it.
+                </p>
+            </div> -->
+        </div>        
+        <div class="item preview">
+            <img src="/static/img/tutorial/gmail-locked.jpg">
+            <!-- <div class="carousel-caption">
+                <h3>
+                    If you click the lock again, it will unencrypt your message so you can send an email as plain text.
+                </h3>
+                <p>
+                    From the ParselTongue extension popup you can set whether you would like emails to other ParselTongue users to be encrypted by default, or if you want to explicitly click the snake on each email you want to encrypt.
+                </p>
+            </div> -->
+        </div>
+        <div class="item preview">
+            <img src="/static/img/tutorial/ext-popup-locked.jpg">
+            <!-- <div class="carousel-caption">
+                <h3>
+                    If you click the lock again, it will unencrypt your message so you can send an email as plain text.
+                </h3>
+                <p>
+                    From the ParselTongue extension popup you can set whether you would like emails to other ParselTongue users to be encrypted by default, or if you want to explicitly click the snake on each email you want to encrypt.
+                </p>
+            </div> -->
+        </div>
+    </div>
 
-<img class="screenshot-image" src="http://i.imgur.com/tDigw8d.png"/>
-
-<h3> ParselTongue works on top of gmail.</h3>
-
-<p> Your gmail will look exactly the same as it did before, except for
-    one new button that appears when you write emails to other ParselTongue users.
-</p>
-<img class="screenshot-image" src="http://i.imgur.com/oD9latr.jpg"/>
-<p>
-    This snake appears when ParselTongue recognizes that you are sending an
-    email to another ParselTongue user.
-</p>
-<p>
-    If you click the snake, ParselTongue will encrypt your email, and a lock
-    will appear where the snake was. Although the email will look the same to you,
-    whenever the lock is visible this tells you that your email is encrypted,
-    and only you and your email's recipients will be able to read it.
-</p>
-<img class="screenshot-image" src="http://i.imgur.com/pEMhIWG.jpg"/>
-
-<p>
-    If you click the lock again, it will unencrypt your message so you can send an email as plain text.
-</p>
-<p> From the ParselTongue extension popup you can set whether you would like
-    emails to other ParselTongue users to be encrypted by default, or if you want to
-    explicitly click the snake on each email you want to encrypt.</p>
-
-<img class="screenshot-image" src="http://i.imgur.com/V110BWG.jpg/">
-
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+  </a>
+</div>
