--- a/truespeak/templates/base.html
+++ b/truespeak/templates/base.html
@@ -16,7 +16,7 @@
     <meta charset="utf-8">
     <title>ParselTongue</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Client side encrypted communication across the web.">
+    <meta name="description" content="ParselTongue - the client-side encryption extension for Gmail.">
     <meta name="author" content="Max Fowler, Josh Blum, Stephanie Wang">
 
     <script>
@@ -28,7 +28,12 @@
         ga('create', 'UA-47467080-1', 'getparseltongue.com');
         ga('send', 'pageview');
 
+
+        ga('create', 'UA-47467080-2', 'parseltongueextension.com');
+        ga('send', 'pageview');
+
     </script>
+
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
