--- a/truespeak/templates/home.html
+++ b/truespeak/templates/home.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block css %}
-    <link href="/static/home.css" rel="stylesheet">
+    <link href="/static/css/home.css" rel="stylesheet">
 {% endblock %}
 
 {% block body %}
