--- a/truespeak/templates/contact.html
+++ b/truespeak/templates/contact.html
@@ -3,7 +3,12 @@
 {% block body %}
 
     <div class="container">
-        <p style="font-size:20px;padding-left:30%"><a href="mailto:parseltongueextension@gmail.com">parseltongueextension@gmail.com</a></p>
+        <div class="contributors">
+        	
+        </div>
+        <div class="github">
+
+        </div>
     </div>
 
 {% endblock %}
