--- a/truespeak/templates/tutorial_snippet.html
+++ b/truespeak/templates/tutorial_snippet.html
@@ -1,56 +1,53 @@
 <div id="carousel-example-generic" class="carousel slide">
-
+    <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="4"></li>
+  </ol>
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
         <div class="active item preview">
             <img src="/static/img/tutorial/ext-icon.jpg">
-            <!-- <div class="carousel-caption">
+            <div class="carousel-caption">
                 <p> 
-                    Click on this snake to log in and out of ParselTongue, modify your settings, or go back to the about page.
+                    Click the snake to log in and out of ParselTongue, modify settings, or to the about page.
                 </p>
-            </div> -->
+            </div>
         </div>
         <div class="item preview">
-            <img src="/static/img/tutorial/ext-popup-locked.jpg">
-            <!-- <div class="carousel-caption">
-                <h3>ParselTongue works on top of gmail.</h3>
+            <img src="/static/img/tutorial/gmail-locked.jpg">
+            <div class="carousel-caption">  
                 <p>
-                    Your gmail will look exactly the same as it did before, except for one new button that appears when you write emails to other ParselTongue users.
+                    Your Gmail will look exactly the same as it did before, except for one new button that appears when you write emails to other ParselTongue users.
                 </p>
-            </div> -->
+            </div>
         </div>
         <div class="item preview">
             <img src="/static/img/tutorial/gmail-unlocked.jpg">
-            <!-- <div class="carousel-caption">
-                <h3>
-                    This snake appears when ParselTongue recognizes that you are sending an email to another ParselTongue user.
-                </h3>
+            <div class="carousel-caption">
                 <p>
-                    If you click the snake, ParselTongue will encrypt your email, and a lock will appear where the snake was. Although the email will look the same to you, whenever the lock is visible this tells you that your email is encrypted, and only you and your email's recipients will be able to read it.
+                    Click the snake to encrypt your email, only you and your email's recipients will be able to read it.
                 </p>
-            </div> -->
+            </div>
         </div>        
         <div class="item preview">
             <img src="/static/img/tutorial/gmail-locked.jpg">
-            <!-- <div class="carousel-caption">
-                <h3>
-                    If you click the lock again, it will unencrypt your message so you can send an email as plain text.
-                </h3>
+            <div class="carousel-caption">
                 <p>
-                    From the ParselTongue extension popup you can set whether you would like emails to other ParselTongue users to be encrypted by default, or if you want to explicitly click the snake on each email you want to encrypt.
+                    Click the lock again, to send your email unencrypted.
                 </p>
-            </div> -->
+            </div>
         </div>
         <div class="item preview">
             <img src="/static/img/tutorial/ext-popup-locked.jpg">
-            <!-- <div class="carousel-caption">
-                <h3>
-                    If you click the lock again, it will unencrypt your message so you can send an email as plain text.
-                </h3>
+            <div class="carousel-caption">
                 <p>
-                    From the ParselTongue extension popup you can set whether you would like emails to other ParselTongue users to be encrypted by default, or if you want to explicitly click the snake on each email you want to encrypt.
+                    Use the popup to make encryption a default.
                 </p>
-            </div> -->
+            </div>
         </div>
     </div>
 
