--- a/truespeak/templates/base.html
+++ b/truespeak/templates/base.html
@@ -1,3 +1,5 @@
+{% load filters %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,9 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="shortcut icon" href="/static/img/favicon.ico">
-
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/static/css/base.css" rel="stylesheet">
+    {% include_style "/static/css/bootstrap.min" %}
+    {% include_style "/static/css/base" %}
 
     {% block css %}
     {% endblock %}
@@ -54,7 +55,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand pt-logo" {% if user.is_authenticated %}href="/settings/"{% else %}href="/"{% endif %}>ParselTongue</a>
+            <a class="navbar-brand pt-logo" {% if user.is_authenticated %}href="/settings/"{% else %}href="/"{% endif %}>ParselTongue<img class="nav-logo" src="/static/img/snake-icon-32.png"></a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
@@ -95,9 +96,9 @@
     </div>
 </div>
 
-<script src="/static/js/jquery-1.10.2.min.js"></script>
-<script src="/static/js/bootstrap.min.js"></script>
-<script src="/static/js/base.js"></script>
+{% include_script "/static/js/jquery-1.10.2.min" %}
+{% include_script "/static/js/bootstrap.min" %}
+{% include_script "/static/js/base" %}
 
 {% block js %}
 {% endblock %}
