--- a/truespeak/static/css/base.css
+++ b/truespeak/static/css/base.css
@@ -141,6 +141,7 @@ a.sign-in-button {
 
 .twitter-link {
     margin-top:15px;
+    margin-right:30px;
     color:black;
     float:right;
 }
@@ -189,8 +190,8 @@ span.password-error-message {
     z-index:-1;
 }
 
-.atleast {
-    min-height:640px;
+.at-least {
+    min-height:540px;
 }
 
 .jumbotron {
@@ -358,4 +359,9 @@ h1.welcome-header {
     background-color: #000 \9;
     background-color: rgba(0,0,0,0);
     border: 1px solid #000;
+}
+
+.icon {
+    width: 16px;
+    height: 16px;
 }
